rocketmq/rocketmq-dashboard/kubernetes/rocketmq-dashboard-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketmq-app-dashboard
  namespace: dbaas
  labels:
    app: rocketmq-app-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rocketmq-app-dashboard
  template:
    metadata:
      labels:
        name: rocketmq-app-dashboard
        app: rocketmq-app-dashboard
      annotations:
        #disable istio sidecar injection
        #sidecar.istio.io/inject: "false"
        #scheduler.alpha.kubernetes.io/critical-pod=""
    spec:
      containers:
      - name: rocketmq-dashboard
        #image: apacherocketmq/rocketmq-dashboard
        image: slpcat/rocketmq-dashboard
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: "2"
            memory: 4Gi
        ports:
          - name: web
            containerPort: 8080
        volumeMounts:
          - name: config
            mountPath: "/opt/rocketmq-dashboard/config/"
      volumes:
      - name: config
        configMap:
          name: rocketmq-app-dashboard-config
