rocketmq/rocketmq-dashboard/kubernetes/rocketmq-console-ng-svc.yml
kind: Service
apiVersion: v1
metadata:
  labels:
      app: rocketmq-console-ng
  name: rocketmq-console-ng-svc
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: web
  selector:
    app: rocketmq-console-ng
  type: NodePort
