rocketmq/rocketmq-dashboard/kubernetes/rocketmq-dashboard-svc.yml
kind: Service
apiVersion: v1
metadata:
  labels:
      app: rocketmq-app-dashboard
  name: rocketmq-app-dashboard-svc
  namespace: dbaas
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: web
  selector:
    app: rocketmq-app-dashboard
  type: NodePort
